--- a/letterOfRecGenerator/views/pages/email-letter-preview.ejs
+++ b/letterOfRecGenerator/views/pages/email-letter-preview.ejs
@@ -76,7 +76,7 @@
         };
 
         $.ajax({
-            url: 'http://recommendation.usc.edu/email-letter-preview',
+            url: 'http://localhost:3000/email-letter-preview',
             data: {
                 id: id,
                 Email: Email
@@ -84,7 +84,7 @@
             type: 'POST',
             complete: function() {
                 console.log('worked');
-                window.location.href = 'http://recommendation.usc.edu/recommender-dashboard';
+                window.location.href = 'http://localhost:3000/recommender-dashboard';
             },
             error: function () {
                 console.log('error')
