--- a/letterOfRecGenerator/views/pages/form-entry.ejs
+++ b/letterOfRecGenerator/views/pages/form-entry.ejs
@@ -267,7 +267,7 @@
         }
         // redirects to form-completed page on success, sends responseArray to server
         $.ajax({
-            url: 'http://recommendation.usc.edu/form-entry',
+            url: 'http://localhost:3000/form-entry',
             data: {
                 id: id,
                 responseData: responseArray
