--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -251,7 +251,7 @@
         var subject = document.getElementById('subject').value;
         var body = document.getElementById('body-text').value;
         $.ajax({
-                url: 'http://recommendation.usc.edu/recommender-dashboard/update',
+                url: 'http://localhost:3000/recommender-dashboard/update',
                 data: {
                     subject: subject,
                     body: body
@@ -282,7 +282,7 @@
         if(status === 'Sent'){
             window.alert("This letter cannot be previewed because the recommendee has not filled out the form!");
         } else {
-            window.location.href = getDestinationRoute('http://recommendation.usc.edu/letter-preview', params);
+            window.location.href = getDestinationRoute('http://localhost:3000/letter-preview', params);
 
         }
     }
@@ -290,7 +290,7 @@
     // On click for trash icon
     function deleteRow(id) {
         $.ajax({
-            url: 'http://recommendation.usc.edu/recommender-dashboard/delete',
+            url: 'http://localhost:3000/recommender-dashboard/delete',
             data: {id},
             type: 'POST',
             complete: function () {
@@ -305,7 +305,7 @@
 
     function openHistory(params) {
         // Check to see if the status is green, if not then show error dialog
-        window.location.href = getDestinationRoute('http://recommendation.usc.edu/history', params);
+        window.location.href = getDestinationRoute('http://localhost:3000/history', params);
     }
 
     function openResponses(params) {
@@ -313,7 +313,7 @@
         if(status === 'Sent'){
             window.alert("Responses cannot be seen because the recommendee has not filled out the form!");
         }else {
-            window.location.href = getDestinationRoute('http://recommendation.usc.edu/response', params);
+            window.location.href = getDestinationRoute('http://localhost:3000/response', params);
         }
     }
 
@@ -323,7 +323,7 @@
         if(status === 'Sent'){
             window.alert("This letter cannot be previewed because the recommendee has not filled out the form!");
         } else {
-            window.location.href = getDestinationRoute('http://recommendation.usc.edu/email-letter-preview', params);
+            window.location.href = getDestinationRoute('http://localhost:3000/email-letter-preview', params);
         }
     }
 
