--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -152,7 +152,7 @@
 
                       // Http Request
                       var request = new XMLHttpRequest();
-                      request.open('POST', "http://recommendation.usc.edu/template-dashboard/uploadLetterTemplate");
+                      request.open('POST', "http://localhost:3000/template-dashboard/uploadLetterTemplate");
                       request.send(formData);
 
                       //Submit success
@@ -225,13 +225,13 @@
 
     function editTemplate(id) {
         $.ajax({
-            url: 'http://recommendation.usc.edu/template-editor/edit',
+            url: 'http://localhost:3000/template-editor/edit',
             data: {id},
             type: 'GET',
             complete: function (data) {
                 var params = data.responseJSON;
                 console.log('complete');
-                window.location.href = getDestinationRoute('http://recommendation.usc.edu/template-editor', params);
+                window.location.href = getDestinationRoute('http://localhost:3000/template-editor', params);
             },
             error: function () {
                 console.log('error');
@@ -241,13 +241,13 @@
 
     function editEmailTemplate(id) {
         $.ajax({
-            url: 'http://recommendation.usc.edu/email-template-editor/edit',
+            url: 'http://localhost:3000/email-template-editor/edit',
             data: {id},
             type: 'GET',
             complete: function (data) {
                 var params = data.responseJSON;
                 console.log('complete');
-                window.location.href = getDestinationRoute('http://recommendation.usc.edu/email-template-editor', params);
+                window.location.href = getDestinationRoute('http://localhost:3000/email-template-editor', params);
             },
             error: function () {
                 console.log('error');
@@ -258,7 +258,7 @@
     // On click for trash icon
     function deleteRow(id) {
         $.ajax({
-            url: 'http://recommendation.usc.edu/template-dashboard/delete',
+            url: 'http://localhost:3000/template-dashboard/delete',
             data: {id},
             type: 'POST',
             complete: function () {
@@ -273,7 +273,7 @@
 
      function deleteEmailRow(id) {
         $.ajax({
-            url: 'http://recommendation.usc.edu/template-dashboard/delete-email',
+            url: 'http://localhost:3000/template-dashboard/delete-email',
             data: {id},
             type: 'POST',
             complete: function () {
