--- a/letterOfRecGenerator/views/pages/archive.ejs
+++ b/letterOfRecGenerator/views/pages/archive.ejs
@@ -337,7 +337,7 @@
 
         function openHistory(params) {
             // Check to see if the status is green, if not then show error dialog
-            window.location.href = getDestinationRoute('http://localhost:3000/history', params);
+            window.location.href = getDestinationRoute('http://128.125.100.147:80/history', params);
         }
 
         // When the user clicks the preview icon, take them to the letter preview page.
@@ -346,19 +346,19 @@
             if(status === 'Sent'){
                 window.alert("This letter cannot be previewed because the recommendee has not filled out the form!");
             } else {
-                window.location.href = getDestinationRoute('http://localhost:3000/letter-preview', params);
+                window.location.href = getDestinationRoute('http://128.125.100.147:80/letter-preview', params);
             }
         }
 
         function editTemplate(id) {
             $.ajax({
-                url: 'http://localhost:3000/template-editor/deactivated-edit',
+                url: 'http://128.125.100.147:80/template-editor/deactivated-edit',
                 data: {id},
                 type: 'GET',
                 complete: function (data) {
                     var params = data.responseJSON;
                     console.log('complete');
-                    window.location.href = getDestinationRoute('http://localhost:3000/template-editor', params);
+                    window.location.href = getDestinationRoute('http://128.125.100.147:80/template-editor', params);
                 },
                 error: function () {
                     console.log('error');
@@ -368,7 +368,7 @@
 
         function restoreTemplate(id) {
             $.ajax({
-                url: 'http://localhost:3000/archive/restore-template',
+                url: 'http://128.125.100.147:80/archive/restore-template',
                 data: {id},
                 type: 'POST',
                 complete: function () {
@@ -383,7 +383,7 @@
 
         function restoreEmailTemplate(id) {
             $.ajax({
-                url: 'http://localhost:3000/archive/restore-email-template',
+                url: 'http://128.125.100.147:80/archive/restore-email-template',
                 data: {id},
                 type: 'POST',
                 complete: function () {
