front end stuff on server

--- a/letterOfRecGenerator/public/css/login.css
+++ b/letterOfRecGenerator/public/css/login.css
@@ -108,12 +108,33 @@ body {
 
 
 .title {
-    padding-top: 100px;
-    font-family: adobe-caslon-pro, serif;
-    font-weight: 600;
+    padding-top: 0px;
+    font-family: National;
+    font-weight: 200;
     font-style: normal;
     font-size: 36px;
     color: white;
+}
+
+.add-btn {
+    background-color: #990000;
+    color: white;
+    cursor: pointer;
+    /* display: table-cell; */
+    font-size: 15px;
+    height: 20px;
+    width:180px;
+    /* border: 0.1px solid black; */
+    position: relative;
+    float: right;
+    right: 8px;
+    padding: 9px 0px 5px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.add-btn:hover {
+    color: #FFCC00;
 }
 
 html {
