front-end to server

--- a/letterOfRecGenerator/views/register.ejs
+++ b/letterOfRecGenerator/views/register.ejs
@@ -6,7 +6,7 @@
 
   <div class="login-page">
     <div class="form">
-    <p align="center" class="title">Letter of Recommendation Generator</p>
+    <p align="center" class="title">Letter of Recommendation</p>
     <% include ./partials/messages %>
     <form  class="login-form" action="/users/register" method="POST">
         <input
