--- a/letterOfRecGenerator/views/login.ejs
+++ b/letterOfRecGenerator/views/login.ejs
@@ -10,7 +10,7 @@
   </head>
     <div class="login-page">
       <div class="form">
-      <p align="center" class="title">Letter of Recommendation Generator</p>
+      <p align="center" class="title">Letter of Recommendation</p>
       <% include ./partials/messages %>
         <form class="login-form" action="/users/login" method="POST">
           <input type="email" id="email" name="email" class="form-control" placeholder="email"/>
