changes to about page

--- a/letterOfRecGenerator/views/pages/about.ejs
+++ b/letterOfRecGenerator/views/pages/about.ejs
@@ -20,28 +20,46 @@
 
         <table id="about-table">
           <td>
-            <p class="title"><%= title %></p>
-            <br>
-            <p> In academia and industry, writing letters of recommendation is a very
-                important task. Many faculty and professionals have a standard template
-                that is merely customized for each request. Others may ask the person to
-                write the recommendation himself, then verify it is accurate before signing.
-                Although this may work, it would be much better if the person requesting
-                the recommendation could help structure the recommendation.
-                This project will allow a person requesting a recommendation to submit all
-                of the information he wants included through a form, and the person
-                writing the recommendation can then automatically pull that information
-                into a template that he has created. After the letter has been generated,
-                the recommender can download it and ensure it is accurate. After the
-                recommender approves it, the original person can also download the
-                electronic version of the letter.
-                Many additional features can be added to this project, and hopefully the
-                group can help to come up with other features after the core functionality
-                has been implemented.
-            </p>
-          </td>
+              <p class="title"><%= title %></p>
+              <br>
+              <p id="description"> In academia and industry, writing letters of recommendation is a very
+                  important task. Many faculty and professionals have a standard template
+                  that is merely customized for each request. Others may ask the person to
+                  write the recommendation himself, then verify it is accurate before signing.
+                  Although this may work, it would be much better if the person requesting
+                  the recommendation could help structure the recommendation.
+              <br><br>
+                  This application allows a person requesting a recommendation to submit all
+                  of the information he wants included through a form, and the person
+                  writing the recommendation can then automatically pull that information
+                  into a template that he has created. After the letter has been generated,
+                  the recommender can download it and ensure it is accurate. After the
+                  recommender approves it, the original person can also download the
+                  electronic version of the letter.
+              </p>
+              <br>
+              <table>
+                <p class="title">Tutorials</p>
+                <br><br><br>
+                <td>
+                  <div id="vid-box">
+                    <td>
+                      <div id="subtitle1"> Create Template </div>
+                      <video id ="vid1" width="320" height="240" controls>
+                        <source src="/images/create-temp.mov" type="video/mov">
+                      </video>
+                    </td>
+                    <td>
+                      <div id="subtitle2"> Create Recommendation </div>
+                      <video id="vid2" width="320" height="240" controls>
+                        <source src="/images/create-temp.mp4" type="video/mp4">
+                      </video>
+                    </td>
+                  </div>
+                </td>
+              </table>
+            </td>
         </table>
-
     </div>
   </body>
 </html>
