--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -7,9 +7,8 @@
     <link rel="stylesheet" type="text/css" href="/css/template-dashboard.css"/>
     <link rel="stylesheet" type="text/css" href="/css/table.css"/>
     <link rel="stylesheet" type="text/css" href="/css/modal.css"/>
-    <style type="text/css">
-
-    </style>
+    <style type="text/css"></style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 <header>
