--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -184,14 +184,14 @@
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="js/template-dashboard.js" type="text/javascript">
+<script type="text/javascript">
     var recommendation_button = document.getElementById("recommendation-button");
     recommendation_button.innerHTML = '<img src="/images/add_template.png" />';
     // var email_button = document.getElementById("email-button");
     // email_button.innerHTML = '<img src="/images/add_email_template.png" />';
 </script>
 
-<script src="js/template-dashboard.js" >
+<script>
     var current_page = [1,1];
     var records_per_page = 5;
     var data = [
