--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -102,6 +102,8 @@
         JSON.parse('<%- JSON.stringify(forms) %>')
     ];
 
+    console.log('Data RD is: ', data);
+
     var timeSortOrder = -1;
     var emailSortOrder = -1;
     var orgSortOrder = -1;
