--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="/css/table.css"/>
     <link rel="stylesheet" type="text/css" href="/css/modal.css"/>
     <link rel="stylesheet" type="text/css" href="/css/recommender-dashboard.css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+      window.jQuery || document.write('<script src="http://recommendation.usc.edu/jquery.min.js"><\/script>'))
+    </script>
 </head>
 <body>
 <header>
@@ -94,16 +97,16 @@
         </div>
     </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+  window.jQuery || document.write('<script src="http://recommendation.usc.edu/jquery.min.js"><\/script>'))
+</script>
 <script>
     var current_page = [1];
     var records_per_page = 10;
     var data = [
         JSON.parse('<%- JSON.stringify(forms) %>')
     ];
-
-    console.log('Data RD is: ', data);
-
     var timeSortOrder = -1;
     var emailSortOrder = -1;
     var orgSortOrder = -1;
