--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="/css/modal.css"/>
     <style type="text/css"></style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+      window.jQuery || document.write('<script src="http://recommendation.usc.edu/jquery.min.js"><\/script>'))
+    </script>
 </head>
 <body>
 <header>
@@ -183,7 +186,10 @@
 
 </div>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+  window.jQuery || document.write('<script src="http://recommendation.usc.edu/jquery.min.js"><\/script>'))
+</script>
 <script type="text/javascript">
     var recommendation_button = document.getElementById("recommendation-button");
     recommendation_button.innerHTML = '<img src="/images/add_template.png" />';
