Changed quotes so that ' would not break dashboards

--- a/letterOfRecGenerator/views/pages/template-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/template-dashboard.ejs
@@ -195,8 +195,8 @@
     var current_page = [1,1];
     var records_per_page = 5;
     var data = [
-        JSON.parse('<%- JSON.stringify(templates) %>'),
-        JSON.parse('<%- JSON.stringify(emailtemplates) %>')
+        JSON.parse(`<%- JSON.stringify(templates) %>`),
+        JSON.parse(`<%- JSON.stringify(emailtemplates) %>`)
     ];
 
     console.log('Data is: ', data);
