--- a/letterOfRecGenerator/public/css/recommender-dashboard.css
+++ b/letterOfRecGenerator/public/css/recommender-dashboard.css
@@ -108,13 +108,14 @@
 
 .input-dropdown {
     font-size: 20px;
-    margin-left: 8px;
-    width: 25%;
+    margin-left: 15px;
+    margin-right: 15px;
+    height: 40px;
 }
 
 .input-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .input-submit {
