very frontend bootstrap overhaul

--- a/letterOfRecGenerator/public/css/header.css
+++ b/letterOfRecGenerator/public/css/header.css
@@ -11,7 +11,7 @@ header #lrg a:hover {
     color: white !important;
 }
 
-.container {
+.header-container {
     width: 100%;
     background-color: #990000;
 }
