--- a/letterOfRecGenerator/views/partials/header.ejs
+++ b/letterOfRecGenerator/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/ebq4wgm.css">
 <link rel="stylesheet" type="text/css" href="/css/header.css" />
 
-<div class="container">
+<div class="header-container">
     <div class="container-content">
         <b id="lrg"><a href="recommender-dashboard">Letter of Recommendation</a></b>
         <b><a href="recommender-dashboard">Recommendations</a></b>
