email can be filtered by url

--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -96,5 +96,26 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="/javascripts/recommender-dashboard.js"></script>
+<script>
+    let email = "<%= email %>";
+    $.ajax({
+    url: '/forms', data: { email }, success: function (response) {
+        data = [response.forms];
+        console.log({ data });
+        createPageButtons(0);
+        // Show page 1 initially
+        changePage(0, 1);
+        sortByTime(0);
+
+        $("#Edit").click(function (e) {
+            e.preventDefault();
+            document.getElementById('body-text').disabled = false;
+            document.getElementById('subject').disabled = false;
+            document.getElementById('Edit').disabled = true;
+            document.getElementById('Save').disabled = false;
+        });
+    }
+});
+</script>
 </body>
 </html>
