--- a/letterOfRecGenerator/public/css/recommender-dashboard.css
+++ b/letterOfRecGenerator/public/css/recommender-dashboard.css
@@ -1,7 +1,9 @@
 #rec-header {
-    display: inline-block;
+    display: flex;
     background-color: white;
     width: 100%;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 #table0 td {
@@ -30,6 +32,21 @@
     margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
+}
+
+#search-div {
+    /* width: 50%; */
+    /* margin: auto; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+}
+
+#clear-selection {
+    width: 21px;
+    position: relative;
+    top: 6.5px;
+    right: 22px;
 }
 
 .add-btn {
