--- a/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
+++ b/letterOfRecGenerator/views/pages/recommender-dashboard.ejs
@@ -16,7 +16,7 @@
     <div id="rec-header">
         <p class="title">Recommendations</p>
         <% if (templates.length) { %>
-            <form id="search-div" onsubmit="search()">
+            <form id="search-div">
                 <input id="search-input" type="text" name="email" placeholder="Filter by Email">
                 <img id="clear-selection" src="images/clear_selection.png" alt="">
                 <button type="submit" id="search-btn">Search</button>
@@ -103,24 +103,7 @@
 <script src="/javascripts/recommender-dashboard.js"></script>
 <script>
     let email = "<%= email %>";
-    $.ajax({
-    url: '/forms', data: { email }, success: function (response) {
-        data = [response.forms];
-        console.log({ data });
-        createPageButtons(0);
-        // Show page 1 initially
-        changePage(0, 1);
-        sortByTime(0);
-
-        $("#Edit").click(function (e) {
-            e.preventDefault();
-            document.getElementById('body-text').disabled = false;
-            document.getElementById('subject').disabled = false;
-            document.getElementById('Edit').disabled = true;
-            document.getElementById('Save').disabled = false;
-        });
-    }
-});
+    search("");
 </script>
 </body>
 </html>
