tags show on new form

--- a/letterOfRecGenerator/views/pages/template-editor.ejs
+++ b/letterOfRecGenerator/views/pages/template-editor.ejs
@@ -127,12 +127,12 @@
                     <span>Tags: </span>
                 </div>
                 <div class="col-11 d-flex">
-                    <div>
-                        <button class="btn btn-outline-dark mr-3">#FNAME</button>
+                    <div id="tag-container">
+                        <!-- <button class="btn btn-outline-dark mr-3">#FNAME</button>
                         <button class="btn btn-outline-dark mr-3">#LNAME</button>
                         <button class="btn btn-outline-dark mr-3">#SUB_PRONOUN</button>
                         <button class="btn btn-outline-dark mr-3">#OBJ_PRONOUN</button>
-                        <button class="btn btn-outline-dark mr-3">#OBJ_PRONOUN</button>
+                        <button class="btn btn-outline-dark mr-3">#OBJ_PRONOUN</button> -->
                         <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
                         <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
                         <!-- <button class="btn btn-outline-dark m-3">#OBJ_PRONOUN</button> -->
